--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,17 @@
-.container, .gameOver {
+#game, #pig {
   display: none;
 }
 
-.jumbotron {
+#pig {
+  padding: 100px;
+  color: white;
   background-image: url("../img/partyPig.jpeg");
   /* background-size: cover; */
   background-position: center;
   -webkit-background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
-    -o-background-size: 100% 100%;
-    background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   text-align: center;
-}
-
-.pig{
-  padding: 100px;
-  color: white;
 }
